--- a/package.json
+++ b/package.json
@@ -1,54 +1,48 @@
 {
-  "name": "social-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.20.5",
-    "appwrite": "^13.0.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.2",
-    "lucide-react": "^0.331.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.50.1",
-    "react-intersection-observer": "^9.8.0",
-    "react-resizable-panels": "^2.0.18",
-    "react-router-dom": "^6.22.0",
-    "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.20.5",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3"
-  }
+	"name": "social-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "biome lint --write --unsafe src/",
+		"format": "biome format --write src/"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@tanstack/react-query": "^5.55.0",
+		"appwrite": "^15.0.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.439.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.2.3",
+		"react-hook-form": "^7.53.0",
+		"react-intersection-observer": "^9.13.1",
+		"react-resizable-panels": "^2.1.2",
+		"react-router-dom": "^6.26.1",
+		"tailwind-merge": "^2.5.2",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@tanstack/react-query-devtools": "^5.55.0",
+		"@types/node": "^22.5.4",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.45",
+		"tailwindcss": "^3.4.10",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.3"
+	}
 }
